@@ -1,6 +1,6 @@
 % File src/library/base/man/duplicated.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2012 R Core Team
+% Copyright 1995-2013 R Core Team
 % Distributed under GPL 2 or later
 
 \name{duplicated}
@@ -48,7 +48,7 @@ anyDuplicated(x, incomparables = FALSE, \dots)
   \item{fromLast}{logical indicating if duplication should be considered
     from the reverse side, i.e., the last (or rightmost) of identical
     elements would correspond to \code{duplicated = FALSE}.}
-  \item{nmax}{the maximum number of unique items expected.}
+  \item{nmax}{the maximum number of unique items expected (greater than one).}
   \item{\dots}{arguments for particular methods.}
   \item{MARGIN}{the array margin to be held fixed: see
     \code{\link{apply}}, and note that \code{MARGIN = 0} maybe useful.}
@@ -103,7 +103,8 @@ anyDuplicated(x, incomparables = FALSE, \dots)
   \code{8*nmax} bytes is allocated, setting \code{nmax} suitably can
   save large amounts of memory.  For factors it is automatically set to
   the smaller of \code{length(x)} and the number of levels plus one (for
-  \code{NA})
+  \code{NA}).  If \code{nmax} is set too small there is liable to be an
+  error: \code{nmax = 1} is silently ignored.
 
   \link{Long vectors} are supported for the default method of
   \code{duplicated}, but may only be usable if \code{nmax} is supplied.
